--- a/Week1/homework/index.html
+++ b/Week1/homework/index.html
@@ -1,1 +1,13 @@
-<!-- replace this with your HTML content -->
+<html>
+
+  <head>
+    <title>Booktitles</title>
+  </head>
+
+  <body>
+    <div id="bookTitles"></div>
+    <script type="text/javascript" src="app.js">
+    </script>
+  </body>
+
+</html>
